card overflow fixed

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -15,7 +15,7 @@
 .card-category {
   background-size: cover;
   background-position: center;
-  height: 180px;
+  min-height: fit-content;
   display: flex;
   justify-content: center;
   align-items: center;
